# bankometer

./: .gitignore  README.md  bankometer.py  pyproject.toml  requirements.txt  setup.py
bankometer/: __init__.py  __main__.py  objdiff.py
bankometer/bank_modules/: __init__.py  factory.py  yettel.py
deployment/: Dockerfile  docker-compose.yml
